tests/rosetta/out/Smalltalk/arithmetic-rational.out
/tmp/arithmetic-rational.st:10: parse error, expected ']'
