tests/rosetta/out/Smalltalk/arithmetic-rational.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:36Z
"
| ans f f2 intSqrt left limit main mid nums perfect right s sq sumRecip val |
intSqrt := [:x | ((x < 2)) ifTrue: [
  x
] .
left := 1.
right := (x / 2).
ans := 0.
[(left <= right)] whileTrue: [
  mid := (left + ((right - left) / 2)).
  sq := (mid * mid).
  ((sq = x)) ifTrue: [
    mid
  ] .
  ((sq < x)) ifTrue: [
    left := (mid + 1).
    ans := mid.
  ] ifFalse: [
    right := (mid - 1).
  ].
]
.
ans ].
sumRecip := [:n | s := 1.
limit := intSqrt value: n.
f := 2.
[(f <= limit)] whileTrue: [
  (((n % f) = 0)) ifTrue: [
    s := (s + (n / f)).
    f2 := (n / f).
    ((f2 ~= f)) ifTrue: [
      s := (s + f).
    ] .
  ] .
  f := (f + 1).
]
.
s ].
main := [ | nums := {6. 28. 120. 496. 672. 8128. 30240. 32760. 523776}.
nums do: [:n |
  s := sumRecip value: n.
  (((s % n) = 0)) ifTrue: [
    val := (s / n).
    perfect := ''.
    ((val = 1)) ifTrue: [
      perfect := 'perfect!'.
    ] .
    Transcript show: (((((('Sum of recipr. factors of ' + (n asString)) + ' = ') + (val asString)) + ' exactly ') + perfect)) printString; cr.
  ] .
]
. ].
main value.
